24 March 2021: Wouter
	- Fix deprecation test to work for iOS TVOS and WatchOS, it uses
	  CFLAGS and CPPFLAGS and also checks if the item is unavailable.

23 March 2021: Wouter
	- Travis enable all tests again. Clang analyzer only a couple times,
	  when there is a difference. homebrew updates disabled, so it does
	  not hang. removed trailing slashes from configure paths. Moved iOS
	  tests to allow-failure.
	- travis, analyzer disabled on test without debug, that does not
	  run anway.  Turn off failing tests except one.  Update iOS test
	  to xcode image 12.2.

22 March 2021: George
	- Fix unused-function warning when compiling with --enable-dnscrypt.
	- Fix for #367: fix memory leak when cannot bind to listening port.
	- Reformat pythonmod/pythonmod_utils.{c,h}.

22 March 2021: Wouter
	- Merge #449 from orbea: build: Add missing linker flags.
	- iana portlist update.
	- Comment out nonworking OSX and IOS travis tests, vm fails to start.
	- Fix compile error in listen_dnsport on Android.
	- Fix memory leak reported by asan in rpz SOA record query name.

19 March 2021: Wouter
	- Fix for #447: squelch connection refused tcp connection failures
	  from the log, unless verbosity is high.

17 March 2021: Wouter
	- Fix #441: Minimal NSEC range not accepted for top level domains.

11 March 2021: Wouter
	- Fix parse of LOC RR type for decimetres.

5 March 2021: Wouter
	- Workaround for #439: prevent loops in the reuse rbtree.
	- Debug output for #411 and #439: printout internal error and details.

4 March 2021: Wouter
	- iana portlist update.
	- Fix spurious errors about "Could not generate request: out of
	  memory".  The mesh detect cycle routine no longer wrongly stops
	  the check when the calling mesh state is unique.

26 February 2021: George
	- Fix for #367: rc_ports don't have ub_sock; skip cleaning up.

26 February 2021: Wouter
	- Fix: Resolve interface names on control-interface too.

25 February 2021: Wouter